# DoomsCall

./: .gitignore  README.md
DoomsCall/: CMakeLists.txt  DoomsCall.cpp  DoomsCall.h  DoomsCall.vcxproj  DoomsCall.vcxproj.filters  README.md  Screens.cpp  Screens.h  Settings.cpp  Settings.h
